--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,9 +31,9 @@ main {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-}
-main p {
   font-family: Verdana;
+}
+main > p {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
@@ -54,9 +54,11 @@ main p {
 .tabs label {
   display: inline-block;
   margin: 0 0 -1px;
-  padding: 15px 25px;
-  font-weight: 600;
+  padding: 11px 24px;
+  font-weight: bold;
   text-align: center;
+  font-size: 12px;
+  line-height: 18px;
   color: #b9b9b9;
 }
 .tabs label:hover {
@@ -64,9 +66,8 @@ main p {
   cursor: pointer;
 }
 .tabs input:checked + label {
-  color: #555;
+  color: #2b2829;
   border-top: 2px solid #f50634;
-  border-bottom: 1px solid #fff;
   background: #fff;
 }
 .tabs > div {
@@ -74,6 +75,7 @@ main p {
   width: 736px;
   height: 450px;
   padding: 25px;
+  padding-top: 32px;
   background: #fff;
 }
 
@@ -88,18 +90,35 @@ main p {
   border-radius: 3px;
   width: 688px;
   height: 46px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 26px;
+  margin-top: 5px;
+}
+.searchTab > p {
+  font-size: 14px;
+  line-height: 26px;
 }
 
 .addWrapper {
+  display: flex;
   width: 500px;
   height: 70px;
+  margin-top: 48px;
+  align-items: center;
 }
 .addWrapper span {
   width: 315px;
-  font-family: Verdana;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
   color: #777777;
+}
+.addWrapper .addIcon {
+  width: 68px;
+  height: 68px;
+  background: url(../img/addIcon.svg);
+  margin-right: 32px;
 }
