--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,11 +96,11 @@ main {
     font-size: 14px;
     line-height: 26px;
     margin-top: 5px;
-      &:focus {
-        outline:none; 
-        border: 1px solid #FAE29F;
-        border-radius: 3px;
-      }
+    &:focus {
+      outline: none;
+      border: 1px solid #fae29f;
+      border-radius: 3px;
+    }
   }
   > p {
     font-size: 14px;
@@ -160,4 +160,40 @@ main {
   font-weight: bold;
   font-size: 14px;
   line-height: 20px;
+}
+
+.orgWrapper {
+  width: 688px;
+  height: 300px;
+  .orgName {
+    border-bottom: 1px solid #dfdfdf;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 45px;
+    color: #2b2829;
+    margin-top: 40px;
+  }
+  .infoWrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+    .numbers {
+      display: inline-flex;
+      flex-direction: column;
+      width: 208px;
+      height: 125px;
+      background: #f8f8f8;
+      border-radius: 3px;
+      padding: 24px;
+      span {
+        font-size: 14px;
+        line-height: 26px;
+      }
+    }
+    .texts {
+      display: inline-flex;
+      flex-direction: column;
+    }
+  }
 }
