--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,7 +45,8 @@ main {
 
 .tabs {
   width: 736px;
-  height: 450px;
+  height: 568px;
+  margin-bottom: 200px;
   > input {
     display: none;
     position: absolute;
@@ -72,7 +73,7 @@ main {
   > div {
     display: none;
     width: 736px;
-    height: 450px;
+    height: 568px;
     padding: 25px;
     padding-top: 32px;
     background: #fff;
@@ -194,6 +195,36 @@ main {
     .texts {
       display: inline-flex;
       flex-direction: column;
+      span.title {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 26px;
+        color: #2b2829;
+        margin-bottom: 8px;
+      }
+      span {
+        margin-bottom: 24px;
+      }
+    }
+  }
+  .saveButton {
+    background: #f50634;
+    border-radius: 3px;
+    width: 186px;
+    height: 46px;
+    border: none;
+    font-family: Verdana;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: center;
+    color: #ffffff;
+    outline: none;
+    &:hover {
+      cursor: pointer;
+      background: #971932f5;
     }
   }
 }
