--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,3 +220,20 @@ main > p {
   cursor: pointer;
   background: #971932f5;
 }
+.orgWrapper .clickedButton {
+  display: inline-flex;
+  align-items: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 34px;
+  color: #b9b9b9;
+  width: 150px;
+  height: 34px;
+}
+.orgWrapper .clickedButton .clickedImg {
+  background: url(../img/doneIcon.svg);
+  width: 16px;
+  height: 13px;
+  margin-right: 8px;
+}
