--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -243,13 +243,15 @@ main {
 }
 
 .listItem {
+  display: flex;
+  flex-direction: column;
   width: 688px;
-  height: 80px;
+  min-height: 80px;
   border: 1px solid #dfdfdf;
   border-radius: 3px;
   padding: 15px;
   margin-bottom: 20px;
-  .deleteIcon {
+  .deleteButton {
     background: url(../img/deleteIcon.svg);
     width: 15px;
     height: 18px;
@@ -273,17 +275,20 @@ main {
     }
   }
   .info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    .innWrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
     span {
       font-style: normal;
       font-weight: normal;
       font-size: 12px;
       line-height: 15px;
-      color: #777777;
+      color: #2b2829;
       span {
         margin-right: 15px;
+        color: #777777;
       }
     }
     .extendButton {
@@ -299,5 +304,25 @@ main {
         cursor: pointer;
       }
     }
+  }
+  .extendableList {
+    display: none;
+    .closeButton {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 10px;
+      line-height: 19px;
+      text-decoration-line: underline;
+      color: #777777;
+      border: none;
+      outline: none;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  .clicked {
+    display: flex;
+    flex-direction: column;
   }
 }
