added ability to delete selected organization

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -190,6 +190,9 @@ main {
       span {
         font-size: 14px;
         line-height: 26px;
+        span {
+          font-weight: bold;
+        }
       }
     }
     .texts {
