--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,7 +104,7 @@ main {
       border-radius: 3px;
     }
     &::placeholder {
-      color: #B9B9B9;
+      color: #b9b9b9;
     }
   }
   > p {
@@ -192,6 +192,7 @@ main {
         line-height: 26px;
         span {
           font-weight: bold;
+          margin-right: 15px;
         }
       }
     }
