--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,7 +45,7 @@ main {
 
 .tabs {
   width: 736px;
-  height: 568px;
+  min-height: 568px;
   margin-bottom: 200px;
   > input {
     display: none;
@@ -171,7 +171,7 @@ main {
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 45px;
+    line-height: 35px;
     color: #2b2829;
     margin-top: 40px;
   }
